--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="#" class="logo">BANTTÚ <span>by SV</span></a>
+                <a href="https://nexorindustrieshealttech-afk.github.io/banttu-store/" class="logo">BANTTÚ <span>by SV</span></a>
                 
                 <ul class="nav-links" id="navLinks">
                     <li><a href="#hero">Inicio</a></li>
@@ -816,7 +816,7 @@
     <!-- FOOTER -->
     <footer>
         <div class="container">
-            <a href="#" class="footer-logo">BANTTÚ by SV</a>
+            <a href="https://nexorindustrieshealttech-afk.github.io/banttu-store/" class="footer-logo">BANTTÚ by SV</a>
             <div class="social-links">
                 <a href="https://www.instagram.com/banttu_by.sv?igsh=MXJjOXV6eDU1d2dr&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.tiktok.com/@banttu_?_r=1&_t=ZS-93PLmdbwyKP" target="_blank"><i class="fab fa-tiktok"></i></a>
